@@ -85,11 +85,15 @@ sub getVlan {
     $logger->trace("SNMP get_request for vmVlan: $OID_vmVlan.$ifIndex");
 
     my $result = $this->{_sessionRead} ->get_request( -varbindlist => ["$OID_vmVlan.$ifIndex"] );
-    return (
-            defined($result)
-            && exists( $result->{"$OID_vmVlan.$ifIndex"})
-            && ( $result->{"$OID_vmVlan.$ifIndex"} ne 'noSuchInstance' )
-           )
+    if (defined($result) 
+        && exists($result->{"$OID_vmVlan.$ifIndex"})
+        && ($result->{"$OID_vmVlan.$ifIndex"} ne 'noSuchInstance')) {
+
+        return $result->{"$OID_vmVlan.$ifIndex"};
+    } else {
+        $logger->error("Unable to get VLAN on ifIndex $ifIndex for ip: ".$this->{'ip'});
+        return;
+    }
 }
 
 =item getMacBridgePortHash
